I inserted my introduction into the template.

--- a/thesis.tex
+++ b/thesis.tex
@@ -16,25 +16,25 @@
 % !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
 %%% COVER: Settings %%%
-\title{The Title of Your PhD Dissertation}
+\title{Topological phenomena out of equilibrium}
 %\subtitle{Multiscale computing for Dummies}
 
 \author{Tijl}{Jappens}
 
-\supervisor{Prof.~dr Wojciech De Roeck}{KU Leuven}
-\president{}{}
-\jurymember{Prof.~dr Thomas Van Riet}{KU Leuven}
-\jurymember{Prof.~dr Joseph Indekeu}{KU Leuven}
-\externaljurymember{}{}
+\supervisor{Prof.~dr.~W.~De Roeck}{}
+\president{Prof.~dr.~ir.~The~Chairman}{}
+\jurymember{Prof.~dr.~ir.~The~One}{}
+\jurymember{Prof.~dr.~ir.~The~Other}{}
+\externaljurymember{Prof.~dr.~External~Jurymember}{Far Away}
 
 % Your research group within the department
 % e.g. iMinds-DistriNet, Scientific Computing Group, ...
-\researchgroup{Instituut voor theoretische fysica}
-\website{https://fys.kuleuven.be/itf} % Leave empty to hide
+\researchgroup{XXXXX}
+\website{http://www.XXXXX.cs.kuleuven.be} % Leave empty to hide
 \email{tijl.jappens@kuleuven.be} % Leave empty to hide
 
-\address{Celestijnenlaan 200D box }
-% \addresscity{B-3001 Leuven} % This is the default value. Note
+\address{Celestijnenlaan 200D}
+\addresscity{B-3001 Leuven} % This is the default value. Note
                               % that 'B-3001 Heverlee' is _incorrect_!!
                               % /[https://www.kuleuven.be/communicatie/marketing/intranet/huisstijl/taalgebruik.html]
 
@@ -100,6 +100,7 @@
 \usepackage{amssymb,amsthm}
 \usepackage{amsmath}
 
+\input{myPackage.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
