--- a/thesis.tex
+++ b/thesis.tex
@@ -97,8 +97,6 @@
 \usepackage{textcomp} % nice greek alphabet
 \usepackage{pifont}   % Dingbats
 \usepackage{booktabs}
-\usepackage{amssymb,amsthm}
-\usepackage{amsmath}
 
 \input{myPackage.tex}
 
@@ -151,12 +149,16 @@
 % tex and in a directory with the given name in the chapters
 % directory.
 
+\includechapter{LoopSPT}
+\includechapter{TranslationSPT}
+
 \includechapter{conclusion}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \appendix
 
+\includeappendix{mySecondAppendix}
 \includeappendix{myappendix}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
