I added the loop paper in the template. I still need to fix the double references though.

--- a/allpapers.bib
+++ b/allpapers.bib
@@ -96,12 +96,17 @@
 }
 
 @article{chen_gu_wen_2011,
-	title={Classification of gapped symmetric phases in one-dimensional spin systems},
-	volume={83}, url={https://arxiv.org/pdf/1008.3745.pdf}, DOI={10.1103/physrevb.83.035107},
-	number={3}, journal={Physical Review B},
-	author={Chen, Xie and Gu, Zheng-Cheng and Wen, Xiao-Gang},
-	year={2011}
-}
+	author = {Chen, X. and Gu, Z.-C. and Wen, X.-G.},
+	date-modified = {2022-02-17 13:31:08 -0800},
+	doi = {10.1103/physrevb.83.035107},
+	journal = {Phys. Rev. B},
+	number = {3},
+	title = {Classification of gapped symmetric phases in one-dimensional spin systems},
+	url = {https://arxiv.org/pdf/1008.3745.pdf},
+	volume = {83},
+	year = {2011},
+	bdsk-url-1 = {https://arxiv.org/pdf/1008.3745.pdf},
+	bdsk-url-2 = {https://doi.org/10.1103/physrevb.83.035107}}
 
 @article{Chen_2013,
 	title={Symmetry protected topological orders and the group cohomology of their symmetry group},
@@ -154,32 +159,34 @@
 }
 
 @article{Else_2016,
-	title={Classification of topological phases in periodically driven interacting systems},
-	volume={93},
-	ISSN={2469-9969},
-	url={http://dx.doi.org/10.1103/PhysRevB.93.201103},
-	DOI={10.1103/physrevb.93.201103},
-	number={20},
-	journal={Physical Review B},
-	publisher={American Physical Society (APS)},
-	author={Else, Dominic V. and Nayak, Chetan},
-	year={2016},
-	month={May}
-}
+	author = {Else, D.V. and Nayak, C.},
+	date-modified = {2022-02-18 14:27:55 -0800},
+	doi = {10.1103/physrevb.93.201103},
+	issn = {2469-9969},
+	journal = {Phys. Rev. B},
+	number = {20},
+	publisher = {American Physical Society (APS)},
+	title = {{Classification of topological phases in periodically driven interacting systems}},
+	url = {http://dx.doi.org/10.1103/PhysRevB.93.201103},
+	volume = {93},
+	year = {2016},
+	bdsk-url-1 = {http://dx.doi.org/10.1103/PhysRevB.93.201103},
+	bdsk-url-2 = {http://dx.doi.org/10.1103/physrevb.93.201103}}
 
 @article{Else_2014,
-	title={Classifying symmetry-protected topological phases through the anomalous action of the symmetry on the edge},
-	volume={90},
-	ISSN={1550-235X},
-	url={http://dx.doi.org/10.1103/PhysRevB.90.235137},
-	DOI={10.1103/physrevb.90.235137},
-	number={23},
-	journal={Physical Review B},
-	publisher={American Physical Society (APS)},
-	author={Else, Dominic V. and Nayak, Chetan},
-	year={2014},
-	month={Dec}
-}
+	author = {Else, D.V. and Nayak, C.},
+	date-modified = {2022-02-18 14:27:51 -0800},
+	doi = {10.1103/physrevb.90.235137},
+	issn = {1550-235X},
+	journal = {Phys. Rev. B},
+	number = {23},
+	publisher = {American Physical Society (APS)},
+	title = {Classifying symmetry-protected topological phases through the anomalous action of the symmetry on the edge},
+	url = {http://dx.doi.org/10.1103/PhysRevB.90.235137},
+	volume = {90},
+	year = {2014},
+	bdsk-url-1 = {http://dx.doi.org/10.1103/PhysRevB.90.235137},
+	bdsk-url-2 = {http://dx.doi.org/10.1103/physrevb.90.235137}}
 
 @misc{nachtergaele2010liebrobinson,
 	title={Lieb-Robinson Bounds in Quantum Many-Body Physics}, 
@@ -281,4 +288,678 @@
 	publisher = {American Physical Society},
 	doi = {10.1103/PhysRevLett.59.799},
 	url = {https://link.aps.org/doi/10.1103/PhysRevLett.59.799}
+}
+
+@article{Stability,
+	author = {Bachmann, S. and De Roeck, W. and Donvil, B. and Fraas, M.},
+	date-added = {2023-05-12 15:14:25 +0200},
+	date-modified = {2023-05-12 15:14:38 +0200},
+	journal = {Quantum},
+	pages = {793},
+	publisher = {Verein zur F{\"o}rderung des Open Access Publizierens in den Quantenwissenschaften},
+	title = {Stability of invertible, frustration-free ground states against large perturbations},
+	volume = {6},
+	year = {2022}}
+
+@article{bachmann2022trotter,
+	author = {Bachmann, S. and Lange, M.},
+	date-added = {2023-05-12 09:52:56 +0200},
+	date-modified = {2023-05-12 09:54:15 +0200},
+	journal = {Annales H. Poincar{\'e}},
+	number = {12},
+	organization = {Springer},
+	pages = {4463--4487},
+	title = {Trotter product formulae for *-automorphisms of quantum lattice systems},
+	volume = {23},
+	year = {2022}}
+
+@inproceedings{kitaev2009periodic,
+	author = {Kitaev, A.},
+	booktitle = {AIP conference proceedings},
+	date-added = {2023-05-11 20:43:47 +0200},
+	date-modified = {2023-05-11 20:43:58 +0200},
+	number = {1},
+	organization = {American Institute of Physics},
+	pages = {22--30},
+	title = {Periodic table for topological insulators and superconductors},
+	volume = {1134},
+	year = {2009}}
+
+@article{nachtergaele2006propagation,
+	author = {Nachtergaele, B. and Ogata, Y. and Sims, R.},
+	date-added = {2023-05-11 14:16:24 +0200},
+	date-modified = {2023-05-11 14:16:41 +0200},
+	journal = {J. Stat. Phys.},
+	pages = {1--13},
+	publisher = {Springer},
+	title = {Propagation of correlations in quantum lattice systems},
+	volume = {124},
+	year = {2006}}
+
+@article{nachtergaele2020quasi,
+	author = {Nachtergaele, B. and Sims, R. and Young, A.},
+	date-added = {2023-05-11 13:15:24 +0200},
+	date-modified = {2023-05-11 13:16:28 +0200},
+	journal = {Annales H. Poincar{\'e}},
+	number = {2},
+	organization = {Springer},
+	pages = {393--511},
+	title = {{Quasi-locality bounds for quantum lattice systems. Part II. Perturbations of frustration-free spin models with gapped ground states}},
+	volume = {23},
+	year = {2022}}
+
+@article{del2021lie,
+	author = {Del Vecchio, S. and Fr{\"o}hlich, J. and Pizzo, A. and Rossi, S.},
+	date-added = {2023-05-11 13:12:24 +0200},
+	date-modified = {2023-05-11 13:12:46 +0200},
+	journal = {Commun. Math. Phys.},
+	pages = {1115--1152},
+	publisher = {Springer},
+	title = {{Lie--Schwinger block-diagonalization and gapped quantum chains with unbounded interactions}},
+	volume = {381},
+	year = {2021}}
+
+@article{li2008entanglement,
+	author = {Li, H. and Haldane, F.D.M},
+	date-added = {2023-05-11 12:55:41 +0200},
+	date-modified = {2023-05-11 12:56:05 +0200},
+	journal = {Phys. Rev. Lett.},
+	number = {1},
+	pages = {010504},
+	publisher = {APS},
+	title = {Entanglement spectrum as a generalization of entanglement entropy: Identification of topological order in non-abelian fractional quantum hall effect states},
+	volume = {101},
+	year = {2008}}
+
+@article{perez2008string,
+	author = {P{\'e}rez-Garc{\'\i}a, D. and Wolf, M.M. and Sanz, M. and Verstraete, F. and Cirac, J.I.},
+	date-added = {2023-05-11 12:53:00 +0200},
+	date-modified = {2023-05-11 12:53:35 +0200},
+	journal = {Phys. Rev. Lett.},
+	number = {16},
+	pages = {167202},
+	publisher = {APS},
+	title = {String order and symmetries in quantum spin lattices},
+	volume = {100},
+	year = {2008}}
+
+@article{nijs:1989a,
+	author = {den Nijs, M. and Rommelse, K.},
+	date-added = {2023-05-11 12:52:01 +0200},
+	date-modified = {2023-05-11 12:52:01 +0200},
+	journal = {Phys. Rev. B},
+	number = {7},
+	pages = {4709},
+	title = {{Preroughening transitions in crystal surfaces and valence-bond phases in quantum spin chains}},
+	volume = {40},
+	year = {1989}}
+
+@article{pollmann2010entanglement,
+	author = {Pollmann, F. and Turner, A.M. and Berg, E. and Oshikawa, M.},
+	date-added = {2023-05-11 12:46:11 +0200},
+	date-modified = {2023-05-11 12:46:31 +0200},
+	journal = {Phys. Rev. B},
+	number = {6},
+	pages = {064439},
+	publisher = {APS},
+	title = {Entanglement spectrum of a topological phase in one dimension},
+	volume = {81},
+	year = {2010}}
+
+@article{aasen2022adiabatic,
+	author = {Aasen, D. and Wang, Z. and Hastings, M.B.},
+	date-added = {2023-05-05 11:39:02 +0200},
+	date-modified = {2023-05-05 11:39:43 +0200},
+	journal = {Phys. Rev. B},
+	number = {8},
+	pages = {085122},
+	publisher = {APS},
+	title = {{Adiabatic paths of Hamiltonians, symmetries of topological order, and automorphism codes}},
+	volume = {106},
+	year = {2022}}
+
+@article{wen2021flow,
+	author = {Wen, X. and Qi, M. and Beaudry, A. and Moreno, J. and Pflaum, M.J. and Spiegel, D. and Vishwanath, A. and Hermele, M.},
+	date-added = {2023-05-05 11:37:21 +0200},
+	date-modified = {2023-05-05 11:37:50 +0200},
+	journal = {arXiv preprint arXiv:2112.07748},
+	title = {{Flow of (higher) Berry curvature and bulk-boundary correspondence in parametrized quantum systems}},
+	year = {2021}}
+
+@article{shiozaki2022adiabatic,
+	author = {Shiozaki, K.},
+	date-added = {2023-05-05 11:29:16 +0200},
+	date-modified = {2023-05-05 11:29:27 +0200},
+	journal = {Phys. Rev. B},
+	number = {12},
+	pages = {125108},
+	publisher = {APS},
+	title = {Adiabatic cycles of quantum spin systems},
+	volume = {106},
+	year = {2022}}
+
+@article{ohyama2022generalized,
+	author = {Ohyama, S. and Shiozaki, K. and Sato, M.},
+	date-added = {2023-05-05 11:27:50 +0200},
+	date-modified = {2023-05-05 11:28:04 +0200},
+	journal = {Phys. Rev. B},
+	number = {16},
+	pages = {165115},
+	publisher = {APS},
+	title = {Generalized Thouless pumps in (1+ 1)-dimensional interacting fermionic systems},
+	volume = {106},
+	year = {2022}}
+
+@article{sopenko2021index,
+	author = {Sopenko, N.},
+	date-added = {2023-05-05 11:00:20 +0200},
+	date-modified = {2023-05-05 11:00:31 +0200},
+	journal = {J. Math. Phys.},
+	number = {11},
+	pages = {111901},
+	publisher = {AIP Publishing LLC},
+	title = {An index for two-dimensional SPT states},
+	volume = {62},
+	year = {2021}}
+
+@inproceedings{Ogata2d,
+	author = {Ogata, Y.},
+	booktitle = {Forum of Mathematics, Pi},
+	date-added = {2023-05-05 10:58:21 +0200},
+	date-modified = {2023-05-05 10:59:01 +0200},
+	organization = {Cambridge University Press},
+	pages = {e13},
+	title = {An $H^3(G,\mathbb{T})$-valued index of symmetry-protected topological phases with on-site finite group symmetry for two-dimensional quantum spin systems},
+	volume = {9},
+	year = {2021}}
+
+@article{OgataZ2,
+	author = {Ogata, Y.},
+	date-added = {2023-05-05 10:56:59 +0200},
+	date-modified = {2023-05-05 10:57:33 +0200},
+	journal = {Commun. Math. Phys.},
+	number = {2},
+	pages = {705--734},
+	publisher = {Springer},
+	title = {A $\mathbb{Z}_2$-index of symmetry protected topological phases with time reversal symmetry for quantum spin chains},
+	volume = {374},
+	year = {2020}}
+
+@article{chen2013symmetry,
+	author = {Chen, X. and Gu, Z.-C. and Liu, Z.-X. and Wen, X.-G.},
+	date-added = {2023-05-05 10:51:43 +0200},
+	date-modified = {2023-05-05 10:52:21 +0200},
+	journal = {Phys. Rev. B},
+	number = {15},
+	pages = {155114},
+	publisher = {APS},
+	title = {Symmetry protected topological orders and the group cohomology of their symmetry group},
+	volume = {87},
+	year = {2013}}
+
+@article{chen2010local,
+	author = {Chen, X. and Gu, Z.-C. and Wen, X.-G.},
+	date-added = {2023-05-05 10:49:14 +0200},
+	date-modified = {2023-05-05 10:49:35 +0200},
+	journal = {Phys. Rev. B},
+	number = {15},
+	pages = {155138},
+	publisher = {APS},
+	title = {Local unitary transformation, long-range quantum entanglement, wave function renormalization, and topological order},
+	volume = {82},
+	year = {2010}}
+
+@article{kapustin2020hall,
+	author = {Kapustin, A. and Sopenko, N.},
+	date-modified = {2022-04-07 15:01:01 -0700},
+	journal = {J. Math. Phys.},
+	number = {10},
+	pages = {101901},
+	publisher = {AIP Publishing LLC},
+	title = {Hall conductance and the statistics of flux insertions in gapped interacting lattice systems},
+	volume = {61},
+	year = {2020}}
+
+@article{kapustin2022local,
+	author = {Kapustin, A. and Sopenko, N.},
+	date-added = {2022-03-31 08:31:13 -0700},
+	date-modified = {2022-03-31 08:31:28 -0700},
+	journal = {arXiv preprint arXiv:2201.01327},
+	title = {{Local Noether theorem for quantum lattice systems and topological invariants of gapped states}},
+	year = {2022}}
+
+@article{von2016phase,
+	author = {von Keyserlingk, C.W. and Sondhi, S.L.},
+	date-modified = {2022-04-07 15:02:25 -0700},
+	journal = {Phys. Rev. B},
+	number = {24},
+	pages = {245145},
+	publisher = {APS},
+	title = {{Phase structure of one-dimensional interacting Floquet systems. I. Abelian symmetry-protected topological phases}},
+	volume = {93},
+	year = {2016}}
+
+@article{moon2020automorphic,
+	author = {Moon, A. and Ogata, Y.},
+	date-modified = {2022-04-07 15:28:09 -0700},
+	journal = {J. Funct. Anal.},
+	number = {8},
+	pages = {108422},
+	publisher = {Elsevier},
+	title = {Automorphic equivalence within gapped phases in the bulk},
+	volume = {278},
+	year = {2020}}
+
+@article{BPT,
+	author = {B{\"u}ttiker, M. and Pr{\^e}tre, A. and Thomas, H.},
+	date-added = {2022-03-15 13:20:18 -0700},
+	date-modified = {2022-03-15 13:20:44 -0700},
+	journal = {Phys. Rev. Lett.},
+	number = {26},
+	pages = {4114},
+	publisher = {APS},
+	title = {Dynamic conductance and the scattering matrix of small conductors},
+	volume = {70},
+	year = {1993}}
+
+@article{De-Nittis:2016va,
+	abstract = {When a flux quantum is pushed through a gapped two- dimensional tight-binding operator, there is an associated spectral flow through the gap which is shown to be equal to the index of a Fredholm operator encoding the topology of the Fermi projection. This is a natural mathematical formulation of Laughlin's Gedankenexperiment. It is used to provide yet another proof of the bulk-edge correspondence. Furthermore, when applied to systems with time reversal symmetry, the spectral flow has a characteristic {\$}{\$}{\{}{$\backslash$}mathbb{\{}Z{\}}{\_}2{\}}{\$}{\$}signature, while for particle--hole symmetric systems it leads to a criterion for the existence of zero energy modes attached to half-flux tubes. Combined with other results, this allows to explain all strong invariants of two-dimensional topological insulators in terms of a single Fredholm operator.},
+	author = {De Nittis, G. and Schulz-Baldes, H.},
+	date = {2016/01/01},
+	date-added = {2022-03-14 12:04:26 -0700},
+	date-modified = {2022-03-14 12:04:40 -0700},
+	doi = {10.1007/s00023-014-0394-5},
+	id = {De Nittis2016},
+	isbn = {1424-0661},
+	journal = {Annales H. Poincar{\'e}},
+	number = {1},
+	pages = {1--35},
+	title = {Spectral Flows Associated to Flux Tubes},
+	url = {https://doi.org/10.1007/s00023-014-0394-5},
+	volume = {17},
+	year = {2016},
+	bdsk-url-1 = {https://doi.org/10.1007/s00023-014-0394-5}}
+
+@article{avron1994charge,
+	author = {Avron, J.E. and Seiler, R. and Simon, B.},
+	date-added = {2022-03-14 12:00:05 -0700},
+	date-modified = {2022-03-14 12:00:19 -0700},
+	journal = {Commun. Math. Phys.},
+	number = {2},
+	pages = {399--422},
+	publisher = {Springer},
+	title = {Charge deficiency, charge transport and comparison of dimensions},
+	volume = {159},
+	year = {1994}}
+
+@article{OurIndex,
+	author = {Bachmann, S. and Bols, A. and De Roeck, W. and Fraas, M.},
+	date-added = {2022-03-14 11:58:11 -0700},
+	date-modified = {2022-03-14 11:58:36 -0700},
+	journal = {Commun. Math. Phys.},
+	number = {2},
+	pages = {1249--1272},
+	publisher = {Springer},
+	title = {A many-body index for quantum charge transport},
+	volume = {375},
+	year = {2020}}
+
+@inproceedings{OurHall,
+	author = {Bachmann, S. and Bols, A. and De Roeck, W. and Fraas, M.},
+	booktitle = {Annales H. Poincar{\'e}},
+	date-added = {2022-03-14 11:56:49 -0700},
+	date-modified = {2022-03-14 11:57:09 -0700},
+	number = {3},
+	organization = {Springer},
+	pages = {695--708},
+	title = {Quantization of conductance in gapped interacting systems},
+	volume = {19},
+	year = {2018}}
+
+@article{HastingsMichalakis,
+	author = {Hastings, M.B. and Michalakis, S.},
+	date-added = {2022-03-14 11:54:45 -0700},
+	date-modified = {2022-03-14 11:55:06 -0700},
+	journal = {Commun. Math. Phys.},
+	number = {1},
+	pages = {433--471},
+	publisher = {Springer},
+	title = {{Quantization of Hall conductance for interacting electrons on a torus}},
+	volume = {334},
+	year = {2015}}
+
+@article{avron2004transport,
+	author = {Avron, J.E. and Elgart, A. and Graf, G.M. and Sadun, L.},
+	date-added = {2022-03-14 11:52:33 -0700},
+	date-modified = {2022-03-14 11:52:53 -0700},
+	journal = {J. Stat. Phys.},
+	number = {1},
+	pages = {425--473},
+	publisher = {Springer},
+	title = {Transport and dissipation in quantum pumps},
+	volume = {116},
+	year = {2004}}
+
+@article{KunoHatsugai,
+	author = {Kuno, Y. and Hatsugai, Y.},
+	date-added = {2022-03-12 12:22:35 -0800},
+	date-modified = {2022-03-12 12:22:35 -0800},
+	doi = {10.1103/PhysRevB.104.125146},
+	issue = {12},
+	journal = {Phys. Rev. B},
+	numpages = {11},
+	pages = {125146},
+	publisher = {American Physical Society},
+	title = {{Topological pump and bulk-edge-correspondence in an extended Bose-Hubbard model}},
+	url = {https://link.aps.org/doi/10.1103/PhysRevB.104.125146},
+	volume = {104},
+	year = {2021},
+	bdsk-url-1 = {https://link.aps.org/doi/10.1103/PhysRevB.104.125146},
+	bdsk-url-2 = {https://doi.org/10.1103/PhysRevB.104.125146}}
+
+@article{diestel1978vector,
+	author = {Diestel, J. and Uhl, J.J.},
+	date-added = {2022-03-09 13:54:51 -0800},
+	date-modified = {2022-03-10 13:08:36 -0800},
+	journal = {Bull. Am. Math. Soc},
+	number = {4},
+	pages = {681--685},
+	title = {Vector measures},
+	volume = {84},
+	year = {1978}}
+
+@article{bruckner1960minimal,
+	author = {Bruckner, A.},
+	date-added = {2022-02-18 14:33:54 -0800},
+	date-modified = {2022-02-18 14:33:54 -0800},
+	journal = {Pacific J. Math.},
+	number = {4},
+	pages = {1155--1162},
+	publisher = {Mathematical Sciences Publishers},
+	title = {Minimal superadditive extensions of superadditive functions},
+	volume = {10},
+	year = {1960}}
+
+@article{nachtergaele2019quasi,
+	author = {Nachtergaele, B. and Sims, R. and Young, A.},
+	date-added = {2022-02-18 14:29:55 -0800},
+	date-modified = {2022-03-10 13:08:57 -0800},
+	journal = {J. Math. Phys.},
+	number = {6},
+	pages = {061101},
+	publisher = {AIP Publishing LLC},
+	title = {{Quasi-locality bounds for quantum lattice systems. Part I. Lieb-Robinson bounds, quasi-local maps, and spectral flow automorphisms}},
+	volume = {60},
+	year = {2019}}
+
+@article{bachmann2012automorphic,
+	author = {Bachmann, S. and Michalakis, S. and Nachtergaele, B. and Sims, R.},
+	date-added = {2022-02-17 13:18:10 -0800},
+	date-modified = {2022-02-17 13:18:30 -0800},
+	journal = {Commun. Math. Phys.},
+	number = {3},
+	pages = {835--871},
+	publisher = {Springer},
+	title = {Automorphic equivalence within gapped phases of quantum lattice systems},
+	volume = {309},
+	year = {2012}}
+
+@article{yarotsky2006ground,
+	author = {Yarotsky, D.A.},
+	date-added = {2022-02-17 13:03:40 -0800},
+	date-modified = {2022-02-17 13:03:51 -0800},
+	journal = {Commun. Math. Phys.},
+	number = {3},
+	pages = {799--819},
+	publisher = {Springer},
+	title = {Ground states in relatively bounded quantum perturbations of classical lattice systems},
+	volume = {261},
+	year = {2006}}
+
+@article{thouless1983quantization,
+	author = {Thouless, D.J.},
+	date-modified = {2022-02-17 13:28:59 -0800},
+	journal = {Phys. Rev. B},
+	number = {10},
+	pages = {6083},
+	publisher = {APS},
+	title = {Quantization of particle transport},
+	volume = {27},
+	year = {1983}}
+
+@article{potter2016classification,
+	author = {Potter, A.C. and Morimoto, T. and Vishwanath, A.},
+	date-modified = {2022-02-17 13:28:12 -0800},
+	journal = {Phys. Rev. X},
+	number = {4},
+	pages = {041001},
+	publisher = {APS},
+	title = {{Classification of interacting topological Floquet phases in one dimension}},
+	volume = {6},
+	year = {2016}}
+
+@article{hastings2005quasiadiabatic,
+	author = {Hastings, M.B. and Wen, X.-G.},
+	date-modified = {2022-02-17 13:30:46 -0800},
+	journal = {Phys. Rev. B},
+	number = {4},
+	pages = {045141},
+	publisher = {APS},
+	title = {Quasiadiabatic continuation of quantum states: The stability of topological ground-state degeneracy and emergent gauge invariance},
+	volume = {72},
+	year = {2005}}
+
+@article{schuch2011classifying,
+	author = {Schuch, N. and P{\'e}rez-Garc{\'\i}a, D. and Cirac, I.},
+	date-modified = {2022-02-17 13:28:43 -0800},
+	journal = {Phys. Rev. B},
+	number = {16},
+	pages = {165139},
+	publisher = {APS},
+	title = {Classifying quantum phases using matrix product states and projected entangled pair states},
+	volume = {84},
+	year = {2011}}
+
+@article{pollmann2012symmetry,
+	author = {Pollmann, F. and Berg, E. and Turner, A.M. and Oshikawa, M.},
+	date-modified = {2022-02-17 13:27:04 -0800},
+	journal = {Phys. Rev. B},
+	number = {7},
+	pages = {075125},
+	publisher = {APS},
+	title = {Symmetry protection of topological phases in one-dimensional quantum spin systems},
+	volume = {85},
+	year = {2012}}
+
+@article{hofmann1965topologische,
+	author = {Hofmann, K.H. and Mostert, P.S.},
+	date-modified = {2022-02-17 13:30:20 -0800},
+	journal = {Arch. Math.},
+	number = {1},
+	pages = {191--196},
+	publisher = {Springer},
+	title = {{Die topologische Struktur des Raumes der Epimorphismen kompakter Gruppen}},
+	volume = {16},
+	year = {1965}}
+
+@article{nachtergaele2010lieb,
+	author = {Nachtergaele, Bruno and Sims, Robert},
+	journal = {Contemp. Math},
+	pages = {141--176},
+	title = {Lieb-Robinson bounds in quantum many-body physics},
+	volume = {529},
+	year = {2010}}
+
+@book{BratRob2,
+	author = {Bratteli, O. and Robinson, D.W.},
+	date-added = {2021-06-24 11:29:35 -0700},
+	date-modified = {2021-06-24 11:30:32 -0700},
+	edition = {2nd},
+	publisher = {Springer},
+	title = {Operator Algebras and Quantum Statistical Mechanics 2: Equilibrium States. Models in Quantum Statistical Mechanics},
+	year = {1987}}
+
+@book{BratRob,
+	author = {Bratteli, O. and Robinson, D.W.},
+	date-added = {2021-06-22 15:59:40 -0700},
+	date-modified = {2021-06-22 16:00:58 -0700},
+	edition = {2nd},
+	publisher = {Springer},
+	title = {Operator Algebras and Quantum Statistical Mechanics 1: C*- and W*-Algebras, Symmetry Groups, Decomposition of States},
+	year = {1987}}
+
+@article{matsui2013boundedness,
+	author = {Matsui, T.},
+	date-added = {2021-06-22 14:53:26 -0700},
+	date-modified = {2021-06-22 14:53:34 -0700},
+	journal = {Rev. Math. Phys.},
+	number = {09},
+	pages = {1350017},
+	publisher = {World Scientific},
+	title = {Boundedness of entanglement entropy and split property of quantum spin chains},
+	volume = {25},
+	year = {2013}}
+
+@article{hastings2007area,
+	author = {Hastings, M.B.},
+	date-added = {2021-06-22 14:50:09 -0700},
+	date-modified = {2021-06-22 14:50:39 -0700},
+	journal = {J. Stat. Mech.},
+	number = {08},
+	pages = {P08024},
+	publisher = {IOP Publishing},
+	title = {An area law for one-dimensional quantum systems},
+	volume = {2007},
+	year = {2007}}
+
+@article{HastingsClustering,
+	author = {Hastings, M.B. and Koma, T.},
+	date-added = {2021-06-22 14:27:47 -0700},
+	date-modified = {2021-06-22 14:27:47 -0700},
+	journal = {Commun. Math. Phys.},
+	number = {3},
+	pages = {781--804},
+	publisher = {Springer},
+	title = {Spectral gap and exponential decay of correlations},
+	volume = {265},
+	year = {2006}}
+
+@article{Lieb:1972ts,
+	author = {Lieb, E.H. and Robinson, D.W.},
+	date-added = {2021-06-22 14:17:24 -0700},
+	date-modified = {2021-06-22 14:17:24 -0700},
+	journal = {Commun. Math. Phys.},
+	number = {3},
+	pages = {251--257},
+	title = {{The finite group velocity of quantum spin systems}},
+	volume = {28},
+	year = {1972}}
+
+@article{ogata2021classification,
+	author = {Ogata, Y.},
+	date-added = {2021-06-22 11:58:59 -0700},
+	date-modified = {2021-06-22 11:59:15 -0700},
+	journal = {Trans. Amer. Math. Soc.},
+	number = {2},
+	pages = {39--65},
+	title = {A classification of pure states on quantum spin chains satisfying the split property with on-site finite group symmetries},
+	volume = {8},
+	year = {2021}}
+
+@article{Xiong_2018,
+	abstract = {A number of proposals with differing predictions (e.g. Borel group cohomology, oriented cobordism, group supercohomology, spin cobordism, etc) have been made for the classification of symmetry protected topological (SPT) phases. Here we treat various proposals on an equal footing and present rigorous, general results that are independent of which proposal is correct. We do so by formulating a minimalist generalized cohomology hypothesis, which is satisfied by existing proposals and captures essential aspects of SPT classification. From this hypothesis alone, formulas relating classifications in different dimensions and/or protected by different symmetry groups are derived. Our formalism is expected to work for fermionic as well as bosonic phases, Floquet as well as stationary phases, and spatial as well as on-site symmetries. As an application, we predict that the complete classification of 3D bosonic SPT phases with space group symmetry G is , where the H1 term classifies phases beyond the Borel group cohomology proposal.},
+	author = {Xiong, C.Z.},
+	date-added = {2021-06-22 11:29:24 -0700},
+	date-modified = {2022-02-18 14:28:15 -0800},
+	doi = {10.1088/1751-8121/aae0b1},
+	journal = {J. Phys. A},
+	number = {44},
+	pages = {445001},
+	publisher = {{IOP} Publishing},
+	title = {Minimalist approach to the classification of symmetry protected topological phases},
+	url = {https://doi.org/10.1088/1751-8121/aae0b1},
+	volume = {51},
+	year = 2018,
+	bdsk-url-1 = {https://doi.org/10.1088/1751-8121/aae0b1}}
+
+@unpublished{KitaevConf,
+	author = {A. Kitaev},
+	date-added = {2021-06-22 11:25:06 -0700},
+	date-modified = {2021-06-22 11:34:17 -0700},
+	note = {\url{http://scgp.stonybrook.edu/video_portal/video.php?id=2010}},
+	title = {On the Classification of Short-Range Entangled States},
+	urldate = {http://scgp.stonybrook.edu/video_portal/video.php?id=2010}}
+
+@article{PhysRevB.93.245145,
+	author = {von Keyserlingk, C.W. and Sondhi, S.L.},
+	date-added = {2021-06-22 11:15:04 -0700},
+	date-modified = {2021-06-22 11:26:38 -0700},
+	doi = {10.1103/PhysRevB.93.245145},
+	issue = {24},
+	journal = {Phys. Rev. B},
+	month = {Jun},
+	numpages = {18},
+	pages = {245145},
+	publisher = {American Physical Society},
+	title = {{Phase structure of one-dimensional interacting Floquet systems. I. Abelian symmetry-protected topological phases}},
+	url = {https://link.aps.org/doi/10.1103/PhysRevB.93.245145},
+	volume = {93},
+	year = {2016},
+	bdsk-url-1 = {https://link.aps.org/doi/10.1103/PhysRevB.93.245145},
+	bdsk-url-2 = {https://doi.org/10.1103/PhysRevB.93.245145}}
+
+@book{naaijkens2017quantum,
+	author = {Naaijkens, P.},
+	date-modified = {2022-03-31 08:35:29 -0700},
+	publisher = {Springer},
+	series = {Lecture Notes in Physics},
+	title = {Quantum Spin Systems on Infinite Lattices: A Concise Introduction},
+	volume = {933},
+	year = {2017}}
+
+@book{simon2014statistical,
+	author = {Simon, B.},
+	date-modified = {2022-04-07 15:03:22 -0700},
+	publisher = {Princeton University Press},
+	title = {The Statistical Mechanics of Lattice Gases, Volume I},
+	year = {2014}}
+
+@book{simon2005trace,
+	author = {Simon, Barry},
+	number = {120},
+	publisher = {American Mathematical Soc.},
+	title = {Trace ideals and their applications},
+	year = {2005}}
+
+@article{michalakis2013stability,
+	author = {Michalakis, S. and Zwolak, J.P.},
+	date-modified = {2022-02-17 13:21:35 -0800},
+	journal = {Commun. Math. Phys.},
+	number = {2},
+	pages = {277--302},
+	publisher = {Springer},
+	title = {{Stability of frustration-free Hamiltonians}},
+	volume = {322},
+	year = {2013}}
+
+@article{bravyi2010topological,
+	author = {Bravyi, S. and Hastings, M.B. and Michalakis, S.},
+	date-modified = {2022-02-17 13:21:56 -0800},
+	journal = {J. Math. Phys.},
+	number = {9},
+	pages = {093512},
+	publisher = {American Institute of Physics},
+	title = {Topological quantum order: stability under local perturbations},
+	volume = {51},
+	year = {2010}}
+
+
+@article{roeck2017exponentially,
+	title={An exponentially local spectral flow for possibly non-self-adjoint perturbations of non-interacting quantum spins, inspired by KAM theory},
+	author={Roeck, W. De and Sch{\"u}tz, M.},
+	journal={Lett. Math. Phys},
+	volume={107},
+	pages={505--532},
+	year={2017},
+	publisher={Springer}
 }
