--- a/thesis.tex
+++ b/thesis.tex
@@ -131,15 +131,15 @@
 \myprintnomenclature
 
 \tableofcontents
-\listoffigures
-\listoftables
+%\listoffigures
+%\listoftables
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \mainmatter % to get \pagenumbering{arabic}
 
 % Show instructions on a separate page
-\instructionschapters\cleardoublepage
+%\instructionschapters\cleardoublepage
 
 \includechapter{introduction}
 %\includechapter{manual} % Remove this chapter
@@ -152,7 +152,7 @@
 \includechapter{LoopSPT}
 \includechapter{TranslationSPT}
 
-\includechapter{conclusion}
+%\includechapter{conclusion}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
