I added a section about the GNS representation.

--- a/myPackage.tex
+++ b/myPackage.tex
@@ -55,6 +55,7 @@
 \newcommand{\LL}{\mathcal L}
 \newcommand{\RR}{\mathbb R}
 \newcommand{\NN}{\mathbb{N}}
+\renewcommand{\SS}{\mathcal{S}}
 \newcommand{\id}{\mathbbm{1}}
 
 \newcommand{\Ad}[1]{\textrm{Ad}\left(#1\right)}
