--- a/allpapers.bib
+++ b/allpapers.bib
@@ -963,3 +963,23 @@
 	year={2017},
 	publisher={Springer}
 }
+
+@article{gelfand1943imbedding,
+	title={On the imbedding of normed rings into the ring of operators in Hilbert space},
+	author={Gelfand, Israel and Neumark, Mark},
+	volume={12},
+	number={2},
+	pages={197--217},
+	year={1943}
+}
+@comment{
+journal={\foreignlanguage{russian}{Математический сборник}}},
+publisher={\foreignlanguage{russian}{Российская академия наук, Математический институт им. ВА Стеклова Российской~…}}
+}
+
+
+@article{segal1947irreducible,
+	title={Irreducible representations of operator algebras},
+	author={Segal, Irving E},
+	year={1947}
+}
