--- a/myPackage.tex
+++ b/myPackage.tex
@@ -4,6 +4,7 @@
 \usepackage{ifthen}
 \usepackage{helvet}
 \usepackage[english]{babel}
+\usepackage[X2,T1]{fontenc}
 \usepackage[normalem]{ulem}
 \usepackage{amsmath,amsthm,amssymb}
 \usepackage{thmtools,thm-restate}
