I rewrote my introduction and much more.

--- a/allpapers.bib
+++ b/allpapers.bib
@@ -919,3 +919,21 @@
 	title = {A classification of pure states on quantum spin chains satisfying the split property with on-site finite group symmetries},
 	volume = {8},
 	year = {2021}}
+
+@article{sompet2022realizing,
+	title={Realizing the symmetry-protected Haldane phase in Fermi--Hubbard ladders},
+	author={Sompet, Pimonpan and Hirthe, Sarah and Bourgund, Dominik and Chalopin, Thomas and Bibo, Julian and Koepsell, Joannis and Bojovi{\'c}, Petar and Verresen, Ruben and Pollmann, Frank and Salomon, Guillaume and others},
+	journal={Nature},
+	volume={606},
+	number={7914},
+	pages={484--488},
+	year={2022},
+	publisher={Nature Publishing Group UK London}
+}
+
+@article{sopenko2023chiral,
+	title={Chiral topologically ordered states on a lattice from vertex operator algebras},
+	author={Sopenko, Nikita},
+	journal={arXiv preprint arXiv:2301.08697},
+	year={2023}
+}
